# aaemu-custom

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.toml  config.toml  docker-entrypoint.sh  schema.sql
docs/: integration.md
src/: api.rs  boss_respawn.rs  combat_normalization.rs  config.rs  error.rs  gold_scaling.rs  honor.rs  labor.rs  lib.rs  main.rs  starter_perks.rs  vehicle_mount_system.rs  world_bank.rs
